--- a/css/style.css
+++ b/css/style.css
@@ -69,10 +69,95 @@ a{
 }
 h1 {
 	font-family: 'Raleway', sans-serif;
+	font-size: 42px;
 }
 p{
 	font-family: 'Raleway', sans-serif;
 }
 a {
 	font-family: 'Raleway', sans-serif;
+}
+/*seqcia 1*/
+.box{
+	display: flex;
+	max-width: 1230px;
+	width: 100%
+	height: 540px;
+	background-color: grey;
+	margin: 0 auto;
+	margin-top: 190px;
+}
+.box1{
+	margin-top: 26px;
+	max-width: 520px;
+	width: 100%;
+	height: 435px;
+}
+.box2{
+	max-width: 536px;
+	width: 100%;
+	height: 461px;
+	background-color: red;
+}
+.satauri1{
+	display: flex;
+	flex-direction: column;
+	max-width: 374px;
+	width: 100%;
+	height: 130px;
+}
+.text{
+	max-width: 444px;
+	width: 100%;
+	height: 170px;
+	font-size: 16px;
+	color: black;
+}
+.p1{
+	margin-top: 20px;
+}
+.home1{
+	color: black;
+}
+button{
+	background-color: #5863F8;
+	max-width: 140px;
+	width: 100%;
+	height: 51px;
+	margin-top: 106px;
+}
+@media only screen and (max-width: 850px) {
+	.home1{
+		font-size: 20px;
+	}
+	.home{
+		font-size: 12px;
+	}
+	.text{
+		margin-top: 15px;
+	}
+	.satauri1{
+		height: 50px;
+	}
+}
+@media only screen and (max-width: 580px) {
+	button{
+		margin-top: 20px;
+	}
+}
+@media only screen and (max-width: 580px) {
+	.text{
+		font-size: 12px;
+	}
+	button{
+		margin-top: 179px;
+	}
+}
+@media only screen and (max-width: 475px) {
+	button{
+		margin-top: 80px;
+	}
+	.text{
+		margin-top: 30px;
+	}
 }
