--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ li{
 }
 a{
 	color: white;
-	font-size: 12px;
+	font-size: 14px;
 	margin-top: 32px;
 }
 .satauri{
@@ -226,14 +226,23 @@ button{
 		margin-top: 16px;
 	}
 }
-
+@media only screen and (max-width: 480px) {
+	.surati1{
+		margin-top: 0px;
+	}
+}
 @media only screen and (max-width: 450px) {
 	.surati2{
 		margin-top: 90px;
 	}
 }
 
-@media only screen and (max-width: 420px) {
+@media only screen and (max-width: 535px) {
+	.surati2{
+		margin-top: 30px;
+	}
+}
+@media only screen and (max-width: 430px) {
 	.ori-surati{
 		margin-top: 100px;
 	}
@@ -258,15 +267,53 @@ button{
 		margin-top: 50px;
 	}
 }
-
-@media only screen and (max-width: 889px) {
+@media only screen and (max-width: 845px) {
 	button{
 		margin-top: 30px;
 	}
 }
-
-@media only screen and (max-width: 866px) {
+@media only screen and (max-width: 745px) {
 	button{
-		margin-top: 100px;
+		margin-top: 110px;
 	}
+}
+@media only screen and (max-width: 680px) {
+	button{
+		margin-top: 70px;
+	}
+}
+
+@media only screen and (max-width: 440px) {
+	.text{
+		font-size: 12px;
+	}
+}
+/*section 2*/
+.header2-bg{
+	position: relative;
+	background-image: url(../img/baneri2.jpg);
+	width: 100%;
+	height: 615px;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	margin-top: 90px;
+}
+.satauri2{
+	max-width: 376px;
+	width: 100%;
+	height: 115px;
+	padding-top: 113px;
+	margin-left: 139px;
+	color: white;
+}
+.abus{
+	position: absolute;
+	max-width: 100px;
+	width: 100%;
+	height: 20px;
+	font-size: 14px;
+	color: #5863F8;
+	top: 90px;
+	left: 139px;
 }
